# BoruvkaParallelisedAlgorithm

./: README.md
SemestralWork/: CMakeLists.txt
SemestralWork/data/: test_100-300.txt  test_10k-30k.txt  test_errors  test_simple.txt
SemestralWork/src/: BoruvkaParallel.cpp  BoruvkaParallel.h  BoruvkaSerial.cpp  BoruvkaSerial.h  Graph.cpp  Graph.h  Utils.cpp  Utils.h  main.cpp
